--- a/src/main/resources/templates/Messages/gigSuccess.html
+++ b/src/main/resources/templates/Messages/gigSuccess.html
@@ -4,30 +4,34 @@
 <head th:include="fragments/includes :: indexHead"></head>
 <body th:inline="text" class="gradient-background">
 <div th:include="fragments/navbar :: navHome"></div>
-<main class="success">
-    <div class="background-image"></div>
+<div class="page-flexbox-wrapper">
 
-    <div class="card-panel container white-text">
-    <h3>Great! You applied successfully for: </h3>
-    <h3>[[${gig.gigTitle}]]</h3>
-    <h5>Starts [[${#dates.format(gig.gigStart,'EEE, d MMM yyyy')}]] -  Ends [[${#dates.format(gig.gigEnd,'EEE, d MMM yyyy')}]]</h5>
-    <h3>Look out for an email!</h3>
-    <div class="row center-align">
-        <div class="col m6 s12">
-            <a href="/musician/my-profile/" class="waves-effect waves-light btn">Profile</a>
-        </div>
-        <div class="col m6 s12">
-            <a href="/musician/search/" class="waves-effect waves-light btn">Search Gigs</a>
+    <main class="success">
 
+        <div class="background-image"></div>
+
+        <div class="card-panel container white-text">
+            <h3>Great! You applied successfully for: </h3>
+            <h3>[[${gig.gigTitle}]]</h3>
+            <h5>Starts [[${#dates.format(gig.gigStart,'EEE, d MMM yyyy')}]] -  Ends [[${#dates.format(gig.gigEnd,'EEE, d MMM yyyy')}]]</h5>
+            <h3>Look out for an email!</h3>
+            <div class="row center-align">
+                <div class="col m6 s12">
+                    <a href="/musician/my-profile/" class="waves-effect waves-light btn">Profile</a>
+                </div>
+                <div class="col m6 s12">
+                    <a href="/musician/search/" class="waves-effect waves-light btn">Search Gigs</a>
+
+                </div>
+            </div>
         </div>
-    </div>
+
+
+
+    </main>
+    <div th:include="fragments/footer :: footer"></div>
 </div>
 
-
-
-</main>
-
-<div th:include="fragments/footer :: footer"></div>
 <span th:include="fragments/includes :: js"></span>
 
 </body>
