--- a/src/main/resources/templates/Messages/messagePage.html
+++ b/src/main/resources/templates/Messages/messagePage.html
@@ -4,27 +4,24 @@
 <head th:include="fragments/includes :: indexHead"></head>
 <body class="gradient-background">
 <div th:include="fragments/navbar :: navHome"></div>
-<main th:inline="text" class="container message">
-    <div class="background-image"></div>
-    <div class="card-panel container white-text">
-    <h4 th:utext="${#strings.replace( #strings.escapeXml( message ),T(java.lang.System).getProperty('line.separator'),'&lt;br /&gt;')}"></h4>
-    <div class="row center-align">
-        <div class="col m6 s12">
-            <a href="/company/my-profile" sec:authorize="hasRole('ROLE_COMPANY')" class="btn  waves-effect waves-light">Go to Profile</a>
+<div class="page-flexbox-wrapper">
 
+    <main th:inline="text" class="container message">
+        <div class="background-image"></div>
+        <div class="card-panel container center-align white-text">
+            <h4 th:utext="${#strings.replace( #strings.escapeXml( message ),T(java.lang.System).getProperty('line.separator'),'&lt;br /&gt;')}"></h4>
+            <div>
+                    <a href="/company/my-profile" sec:authorize="hasRole('ROLE_COMPANY')" class="btn  waves-effect waves-light">Go to Profile</a>
+
+                    <a href="/musician/my-profile" sec:authorize="hasRole('ROLE_MUSICIAN')" class="btn  waves-effect waves-light">Go to Profile</a>
+            </div>
         </div>
-        <div class="col m6 s12">
-            <a href="/musician/my-profile" sec:authorize="hasRole('ROLE_MUSICIAN')" class="btn  waves-effect waves-light">Go to Profile</a>
-
-        </div>
-    </div>
 
 
+    </main>
+    <div th:include="fragments/footer :: footer"></div>
 </div>
 
-
-</main>
-<div th:include="fragments/footer :: footer"></div>
 
 <span th:include="fragments/includes :: js"></span>
 
