--- a/src/main/resources/templates/confirmHire.html
+++ b/src/main/resources/templates/confirmHire.html
@@ -4,9 +4,10 @@
 <head th:include="fragments/includes :: indexHead"></head>
 <body class="gradient-background hireConfirm " th:inline="text">
 <div th:include="fragments/navbar :: navHome"></div>
+<div class="page-flexbox-wrapper">
 
-<main class="confirmHire">
-    <div class="background-image"></div>
+    <main class="confirmHire">
+        <div class="background-image"></div>
         <div class="card-panel">
             <h1 class="white-text">Are you sure you want to hire</h1>
 
@@ -59,8 +60,10 @@
 
 
 
-</main>
-<div th:include="fragments/footer :: footer"></div>
+    </main>
+    <div th:include="fragments/footer :: footer"></div>
+</div>
+
 <span th:include="fragments/includes :: js"></span>
 </body>
 </html>
