--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,10 +4,13 @@
 <head th:include="fragments/includes :: indexHead"></head>
 <body th:inline="text" class="error-page">
 <div th:include="fragments/navbar :: navHome"></div>
+<div class="page-flexbox-wrapper">
 
-<main>
+    <main>
 
-</main>
+    </main>
+
+</div>
 <span th:include="fragments/includes :: js"></span>
 
 </body>
